--- a/package.json
+++ b/package.json
@@ -6,16 +6,13 @@
     "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "heroku-postbuild": "ng build — prod"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
-    "@angular/cli": "~13.3.6",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
-    "@angular/compiler-cli": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
@@ -28,7 +25,6 @@
     "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "typescript": "~4.6.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
